--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "discord.js": "^11.3.2",
     "node-fetch": "^2.3.0",
-    "sequelize": "^4.42.1",
+    "sequelize": ">=5.3.0",
     "sqlite3": "^4.0.6"
   }
 }
